[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["string"] }
erdp = "0.1.1"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["process", "rt"] }
url = "2.5.4"
zl = { git = "https://github.com/ultimaweapon/zero-lua.git" }
