[package]
name = "project"
description = "Project automation powered by Rust and Lua"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ultimaweapon/project"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["string"] }
erdp = "0.2.0"
memchr = "2.7.4"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.147"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["fs", "io-util", "process", "rt", "time"] }
tsuki = { version = "0.4.3", features = ["serde"] }
url = "2.5.4"
